--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,6 +17,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
+      - name: Commit Lint 
+        run: | 
+          gitlint --commits origin/master..
       - name: Format
         run: |
           black . --check --diff
