--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
 name: Build
-on: [push]
+on: [push, pull_request]
 
 jobs:
   linter:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ['3.6', '3.7']
+        python: ["3.6", "3.7"]
     steps:
       - uses: actions/checkout@v1
       - name: Use Python ${{ matrix.python }}
@@ -17,9 +17,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-      - name: Commit Lint 
-        run: | 
-          gitlint --commits origin/master..
+      - name: Lint Last Commit
+        if: github.event_name == 'push'
+        run: |
+          gitlint
+      - name: Lint All Commits on Pull Request
+        if: github.event_name == 'pull_request'
+        run: |
+          gitlint --commits origin/${{ github.base_ref }}..${{ github.event.pull_request.head.sha }}
       - name: Format
         run: |
           black . --check --diff
@@ -35,7 +40,7 @@ jobs:
     needs: linter
     strategy:
       matrix:
-        python: ['3.6', '3.7']
+        python: ["3.6", "3.7"]
     steps:
       - uses: actions/checkout@v1
       - name: Use Python ${{ matrix.python }}
