--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.3
+        with:
+          fetch-depth: 0
       - name: Setup Python 3.8
         uses: actions/setup-python@v2.1.2
         with:
@@ -26,7 +28,7 @@ jobs:
       - name: Lint All Commits on Pull Request
         if: github.event_name == 'pull_request'
         run: |
-          gitlint --commits origin/${{ github.base_ref }}..${{ github.event.pull_request.head.sha }}
+          gitlint --commits "origin/${{ github.base_ref }}...HEAD"
       - name: Format
         run: |
           black . --check --diff
