ci: remove recursive flag for isort
As of `isort 5.0.0`, the `--rc` flag (recursive) is deprecated / redundant as this behaviour is now provided by default.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           pylint salutation.py test_salutation.py
       - name: Import Sorting
         run: |
-          isort -rc . --check --diff
+          isort . --check --diff
       - name: Test
         run: |
           pytest
