refactor(python): Use Poetry for package management
Advantages:

- Separates development and production dependencies.
- The dependency version is specified separately from the lock file. In
practice this means that the version in pyproject.toml generally only
needs to be set to anything other than "*" if and when it becomes
necessary to use a specific version range.
- The lock file includes SHA-256 checksums by default, and these are
checked during installation.

Disadvantages:

- More complex configuration than Pip.
- Python package managers come and go, and this one is likely going to
suffer the same fate *eventually.*
- Introduces poetry.toml simply to specify that the virtualenv should be
in the project directory. The default is to put virtualenvs in
~/.poetry, which is a non-standard location and therefore might
interfere with typical IDE setups, mounting the virtualenv in containers
or VMs, and the like.

CI installation based on
<https://github.com/python-poetry/poetry/blob/master/.github/workflows/main.yml>.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,25 @@ use_parentheses = true
 include_trailing_comma = true
 multi_line_output = 3
 force_grid_wrap = 0
+
+[tool.poetry]
+name = "template-python-hello-world"
+version = "0.1.0"
+description = "Human-readable description"
+authors = ["Your Name <you@example.com>"]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.6"
+
+[tool.poetry.dev-dependencies]
+black = "*"
+gitlint = "*"
+isort = "*"
+pre-commit = "*"
+pylint = "*"
+pytest = "*"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
