--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,24 +20,25 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          python -m pip install poetry
+          python -m poetry install
       - name: Lint Last Commit
         if: github.event_name == 'push'
         run: |
-          gitlint
+          poetry run gitlint
       - name: Lint All Commits on Pull Request
         if: github.event_name == 'pull_request'
         run: |
-          gitlint --commits "origin/${{ github.base_ref }}...HEAD"
+          poetry run gitlint --commits "origin/${{ github.base_ref }}...HEAD"
       - name: Format
         run: |
-          black . --check --diff
+          poetry run black . --check --diff
       - name: Lint
         run: |
-          pylint salutation.py test_salutation.py
+          poetry run pylint salutation.py test_salutation.py
       - name: Import Sorting
         run: |
-          isort -rc . --check --diff
+          poetry run isort -rc . --check --diff
       - name: Test
         run: |
-          pytest
+          poetry run pytest
