docs: Add cautionary note about updating pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,5 @@
 # Configuration file for pre-commit (https://pre-commit.com/)
+# Please run `pre-commit run --all-files` when adding or changing entries.
 
 repos:
 -  repo: https://github.com/jorisroovers/gitlint
