--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,30 @@
 repos:
     - repo: local
       hooks:
+          - id: black
+            name: black
+            entry: black
+            language: system
+            stages: [commit]
+            types: [python]
+
           - id: gitlint
             name: gitlint
             entry: gitlint
             args: [--msg-filename]
             language: system
             stages: [commit-msg]
+
+          - id: isort
+            name: isort
+            entry: isort
+            language: system
+            stages: [commit]
+            types: [python]
+
+          - id: pylint
+            name: pylint
+            entry: pylint
+            language: system
+            stages: [commit]
+            types: [python]
