--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,33 @@
 # Configuration file for pre-commit (https://pre-commit.com/)
+# Please run `pre-commit run --all-files` when adding or changing entries.
 
 repos:
--  repo: https://github.com/jorisroovers/gitlint
-   rev: v0.12.0
-   hooks:
-   -  id: gitlint
-      stages: [commit-msg]
+    - repo: local
+      hooks:
+          - id: black
+            name: black
+            entry: black
+            language: system
+            stages: [commit]
+            types: [python]
 
+          - id: gitlint
+            name: gitlint
+            entry: gitlint
+            args: [--msg-filename]
+            language: system
+            stages: [commit-msg]
+
+          - id: isort
+            name: isort
+            entry: isort
+            language: system
+            stages: [commit]
+            types: [python]
+
+          - id: pylint
+            name: pylint
+            entry: pylint
+            language: system
+            stages: [commit]
+            types: [python]
