feat: Check type annotations using mypy
See <https://mypy.readthedocs.io/en/stable/config_file.html> for
documentation on the stricter options in setup.cfg.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,15 @@ repos:
             stages: [commit]
             types: [python]
 
+          - id: mypy
+            name: mypy
+            entry: mypy
+            args: [--no-incremental]
+            language: system
+            stages: [commit]
+            types: [python]
+            require_serial: true
+
           - id: pylint
             name: pylint
             entry: pylint
