--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,10 @@ jobs:
           poetry run coverage run --module pytest
       - name: Verify test coverage
         run: |
-          poetry run coverage report
+          poetry run coverage html
+      - name: Archive code coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: htmlcov
+        if: ${{ failure() }}
