--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,41 +2,46 @@
 # Please run `pre-commit run --all-files` when adding or changing entries.
 
 repos:
-    - repo: local
-      hooks:
-          - id: black
-            name: black
-            entry: black
-            language: system
-            stages: [commit]
-            types: [python]
+  - repo: local
+    hooks:
+      - id: black
+        name: black
+        entry: black
+        language: system
+        stages: [commit]
+        types: [python]
 
-          - id: gitlint
-            name: gitlint
-            entry: gitlint
-            args: [--msg-filename]
-            language: system
-            stages: [commit-msg]
+      - id: gitlint
+        name: gitlint
+        entry: gitlint
+        args: [--msg-filename]
+        language: system
+        stages: [commit-msg]
 
-          - id: isort
-            name: isort
-            entry: isort
-            language: system
-            stages: [commit]
-            types: [python]
+      - id: isort
+        name: isort
+        entry: isort
+        language: system
+        stages: [commit]
+        types: [python]
 
-          - id: mypy
-            name: mypy
-            entry: mypy
-            args: [--no-incremental]
-            language: system
-            stages: [commit]
-            types: [python]
-            require_serial: true
+      - id: mypy
+        name: mypy
+        entry: mypy
+        args: [--no-incremental]
+        language: system
+        stages: [commit]
+        types: [python]
+        require_serial: true
 
-          - id: pylint
-            name: pylint
-            entry: pylint
-            language: system
-            stages: [commit]
-            types: [python]
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        stages: [commit]
+        types: [python]
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: a99a3fbe79a9d346cabd02a5e167ad0edafe616b # v2.3.0
+    hooks:
+      - id: prettier
