--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,3 @@
 [mypy]
-check_untyped_defs = true
-disallow_any_generics = true
-disallow_untyped_defs = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_return_any = true
-warn_unused_ignores = true
+show_error_codes = true
+strict = true
