--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,6 +34,14 @@ repos:
         types: [python]
         require_serial: true
 
+      - id: pretty-format-toml
+        name: Pretty format TOML
+        entry: pretty-format-toml
+        args: [--autofix]
+        language: system
+        stages: [commit]
+        types: [toml]
+
       - id: pylint
         name: pylint
         entry: pylint
