refactor: Move pylint configuration into pyproject.toml
Makes for one less configuration file/format.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,9 @@ mypy = "*"
 pre-commit = "*"
 pylint = "*"
 pytest = "*"
+
+[tool.pylint.MASTER]
+disable = [
+    "bad-continuation",
+    "invalid-name",
+]
