--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,13 @@ jobs:
       - uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
-      - name: Setup Python 3.9
+      - name: Get configuration
+        run: |
+          echo "PYTHON_VERSION=$(cat .python-version)" | tee -a $GITHUB_ENV
+      - name: Setup Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Install
         run: |
           python -m pip install --upgrade pip
