feat: Use more default pylint settings (#154)
* refactor: Move pylint configuration into pyproject.toml

Makes for one less configuration file/format.

* feat: Use more default pylint settings

These settings are closer to the defaults in
<https://github.com/PyCQA/pylint/blob/main/pylintrc>, and should avoid a
lot of false-ish positives:

- "prefer duplication over the wrong abstraction"
  <https://sandimetz.com/blog/2016/1/20/the-wrong-abstraction>
- Black attempts to fit the code within the max line length, but does
  not treat longer lines as an error
- Docstrings are usually an antipattern, duplicating function and
  parameter names for no benefit
- It is common to have no public methods on base classes

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,15 @@ mypy = "*"
 pre-commit = "*"
 pylint = "*"
 pytest = "*"
+
+[tool.pylint.FORMAT]
+max-line-length = 127
+
+[tool.pylint.MASTER]
+disable = [
+    "bad-continuation",
+    "duplicate-code",
+    "invalid-name",
+    "missing-docstring",
+    "too-few-public-methods",
+]
