--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,3 +61,25 @@ jobs:
           name: code-coverage-report
           path: htmlcov
         if: ${{ failure() }}
+
+  test-nix-shell:
+    strategy:
+      fail-fast: false
+      matrix:
+        channel: [nixos-21.05]
+        os: [ubuntu-18.04, ubuntu-20.04]
+        experimental: [false]
+        include:
+          - os: ubuntu-latest
+            channel: nixos-unstable
+            experimental: true
+    continue-on-error: true # TODO: Use `${{ matrix.experimental }}` once this is stable
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: cachix/install-nix-action@v13
+        with:
+          nix_path: nixpkgs=channel:${{ matrix.channel }}
+
+      - run: nix-shell --command true
