tests: Introduce manual mutation testing job

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ coverage = "*"
 gitlint = "*"
 isort = "*"
 language-formatters-pre-commit-hooks = "*"
+mutmut = "*"
 mypy = "*"
 pre-commit = "*"
 pylint = "*"
