--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-.coverage
-html/
-htmlcov/
-.idea
-.mutmut-cache
-mutmut.xml
-__pycache__
-.pytest_cache
+/.coverage
+/html/
+/htmlcov/
+/.idea
+/.mutmut-cache
+/mutmut.xml
 *.pyc
-.venv
-.vscode
+__pycache__
+/.pytest_cache
 Thumbs.db
+/.venv
+/.vscode
