tests: Introduce mutation testing (#180)
* tests: Introduce manual mutation testing job

* feat: Search for root ignores only at the root

Also sort the entries with
`sort --output=.gitignore --unique .gitignore`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-.coverage
-htmlcov/
-.idea
-__pycache__
-.pytest_cache
+/.coverage
+/html/
+/htmlcov/
+/.idea
+/.mutmut-cache
+/mutmut.xml
 *.pyc
-.venv
-.vscode
+__pycache__
+/.pytest_cache
 Thumbs.db
+/.venv
+/.vscode
