feat: Add simple CLI example

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ build-backend = "poetry.core.masonry.api"
 line-length = 127
 
 [tool.coverage.report]
+exclude_lines = [
+    'if __name__ == "__main__":',
+]
 fail_under = 100
 
 [tool.coverage.run]
@@ -38,6 +41,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.6"
+typer = "*"
 
 [tool.poetry.dev-dependencies]
 black = "*"
