--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          - ubuntu-22.04
+          - ubuntu-latest # Don't use this in production!
         python:
           - "3.7"
           - "3.8"
