--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
         types: [python]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: a99a3fbe79a9d346cabd02a5e167ad0edafe616b # v2.3.0
+    rev: cafd5506f18eea191804850dacc0a4264772d59d # frozen: v3.0.0-alpha.4
     hooks:
       - id: prettier
         stages: [commit]
