--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,10 @@ name = "template-python-hello-world"
 version = "0.1.0"
 description = "A minimal template for Python development"
 authors = [
-    "Ben Cheng <42329567+Ben-Cheng@users.noreply.github.com>",
+    "Ben Cheng <BCheng@linz.govt.nz>",
     "Blayne Chard <bchard@linz.govt.nz>",
     "Daniel Silk <dsilk@linz.govt.nz>",
+    "Mitchell Paff <mpaff@linz.govt.nz>",
     "Victor Engmark <vengmark@linz.govt.nz>",
 
 ]
