--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,22 @@ jobs:
           path: htmlcov
         if: ${{ failure() }}
 
+  test-nix-shell:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: cachix/install-nix-action@v20
+      - uses: cachix/cachix-action@v12
+        with:
+          name: linz
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - run: nix-shell --pure --run 'pre-commit run --all-files'
+
   finalise:
     if: always()
     needs:
       - build
+      - test-nix-shell
     runs-on: ubuntu-latest
     steps:
       - name: Decide whether the needed jobs succeeded or failed
