--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,11 @@ repos:
         stages: [commit]
         types: [python]
 
+  - repo: https://github.com/nix-community/nixpkgs-fmt
+    rev: 6740ea881d3ac5942d4fbf124f5956b896666c76 # frozen: v1.3.0
+    hooks:
+      - id: nixpkgs-fmt
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: cafd5506f18eea191804850dacc0a4264772d59d # frozen: v3.0.0-alpha.4
     hooks:
