--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,3 +51,12 @@ repos:
     hooks:
       - id: prettier
         stages: [commit]
+
+  - repo: https://github.com/koalaman/shellcheck-precommit
+    rev: 3f77b826548d8dc2d26675f077361c92773b50a7 # frozen: v0.9.0
+    hooks:
+      # TODO: Remove if https://github.com/pre-commit/identify/issues/350 is fixed
+      - id: shellcheck
+        files: ^\.envrc$
+        types: []
+        stages: [commit]
