--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,15 @@ repos:
         stages: [commit]
         types: [python]
 
+      - id: deadnix
+        name: deadnix
+        entry: deadnix
+        args: [--edit, --fail]
+        files: \.nix$
+        exclude: ^nix/sources\.nix$
+        language: system
+        stages: [commit]
+
       - id: gitlint
         name: gitlint
         entry: gitlint
@@ -34,12 +43,28 @@ repos:
         types: [python]
         require_serial: true
 
+      - id: nixfmt
+        name: nixfmt
+        entry: nixfmt
+        files: \.nix$
+        language: system
+        stages: [commit]
+
       - id: pylint
         name: pylint
         entry: pylint
         language: system
         stages: [commit]
         types: [python]
+
+      - id: statix
+        name: statix
+        entry: statix
+        args: [check, --ignore=nix/sources.nix]
+        files: \.nix$
+        pass_filenames: false
+        language: system
+        stages: [commit]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: fc260393cc4ec09f8fc0a5ba4437f481c8b55dc1 # frozen: v3.0.3
