--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,11 +35,11 @@ jobs:
           key: ${{ matrix.os }}-pip-${{ secrets.CACHE_SEED }}-${{ matrix.python }}-${{ hashFiles('./poetry.lock') }}
           restore-keys: ${{ matrix.os }}-pip-${{ secrets.CACHE_SEED }}-${{ matrix.python }}-
       - name: Upgrade pip
-        run: python -m pip install --upgrade pip
+        run: pip install --upgrade pip
       - name: Install Poetry
-        run: python -m pip install poetry
+        run: pip install poetry
       - name: Install Python dependencies
-        run: python -m poetry install
+        run: poetry install
       - name: Lint Last Commit
         if: github.event_name == 'push'
         run: poetry run gitlint
